--- a/about.html
+++ b/about.html
@@ -179,18 +179,18 @@
           </p>
         </div>
         <div class="col-xl-6">
-          <div class="link_box">
-            <a class="" href="index.html">
+          <div class="overlay-content">
+            <a class="active" href="index.html">
               Home
             </a>
             <a class="" href="about.html">
               About
             </a>
             <a class="" href="portfolio.html">
-              Portfolio
+              Work
             </a>
             <a class="" href="services.html">
-              Team
+              Services
             </a>
           </div>
         </div>
