--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               Work
             </a>
             <a class="" href="services.html">
-              Team
+              Services
             </a>
           </div>
         </div>
