--- a/portfolio.html
+++ b/portfolio.html
@@ -50,17 +50,17 @@
             </button>
           </div>
           <div class="overlay-content">
-            <a class="" href="index.html">
+            <a class="active" href="index.html">
               Home
             </a>
             <a class="" href="about.html">
               About
             </a>
-            <a class="active" href="portfolio.html">
-              Portfolio
+            <a class="" href="portfolio.html">
+              Work
             </a>
             <a class="" href="services.html">
-              Team
+              Services
             </a>
           </div>
         </div>
