--- a/contact.html
+++ b/contact.html
@@ -57,13 +57,10 @@
               About
             </a>
             <a class="" href="portfolio.html">
-              Portfolio
+              Work
             </a>
             <a class="" href="services.html">
-              Team
-            </a>
-            <a class="" href="contact.html">
-              Contact Us
+              Services
             </a>
           </div>
         </div>
