--- a/services.html
+++ b/services.html
@@ -1,235 +1,232 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-  <title>Photosec</title>
+    <title>Photosec</title>
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <!-- slider stylesheet -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <!-- fonts awesome style -->
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <!-- fonts awesome style -->
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body class="sub_page">
-  <div class="hero_area">
+<div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
-      <nav class="navbar navbar-expand-lg custom_nav-container">
-        <div class="custom_menu-btn">
-          <button onclick="openNav()">
-            <span class="s-1"> </span>
-            <span class="s-2"> </span>
-            <span class="s-3"> </span>
-          </button>
-        </div>
-        <div id="myNav" class="overlay">
-          <div class="menu_btn-style ">
-            <button onclick="closeNav()">
-              <span class="s-1"> </span>
-              <span class="s-2"> </span>
-              <span class="s-3"> </span>
-            </button>
-          </div>
-          <div class="overlay-content">
-            <a class="" href="index.html">
-              Home
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+            <div class="custom_menu-btn">
+                <button onclick="openNav()">
+                    <span class="s-1"></span>
+                    <span class="s-2"></span>
+                    <span class="s-3"></span>
+                </button>
+            </div>
+            <div id="myNav" class="overlay">
+                <div class="menu_btn-style">
+                    <button onclick="closeNav()">
+                        <span class="s-1"></span>
+                        <span class="s-2"></span>
+                        <span class="s-3"></span>
+                    </button>
+                </div>
+                <div class="overlay-content">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a class="active" href="services.html">Team</a>
+                </div>
+            </div>
+            <a class="navbar-brand" href="index.html">
+                <span>Photosec</span>
             </a>
-            <a class="" href="about.html">
-              About
+            <a href="" class="call_btn">
+                Call Us Now
             </a>
-            <a class="" href="portfolio.html">
-              Portfolio
-            </a>
-            <a class="active" href="services.html">
-              Team
-            </a>
-          </div>
-        </div>
-        <a class="navbar-brand" href="index.html">
-          <span>
-            Photosec
-          </span>
-        </a>
-        <a href="" class="call_btn">
-          Call Us Now
-        </a>
-      </nav>
+        </nav>
     </header>
     <!-- end header section -->
-  </div>
+</div>
 
-
-  <!-- Services section -->
-  <section class="team_section">
+<!-- Services section -->
+<section class="team_section">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-4 col-md-5 detail-box detail_box_common text_center">
-          <div class="heading_container heading_center">
-            <h2>
-              Services
-            </h2>
+        <div class="row">
+            <div class="col-lg-4 col-md-5 detail-box detail_box_common text_center">
+                <div class="heading_container heading_center">
+                    <h2>Services</h2>
+                </div>
+                <p>Discover the art of professional photography with Photo Frenzy! Experience the difference with our commitment to quality and creativity, where every shot is a masterpiece.</p>
+                <h2>Contact Form</h2>
+                <form action="#" method="post">
+                    <label for="first_name">First Name:</label><br>
+                    <input type="text" id="first_name" name="first_name" required><br><br>
 
-          </div>
-          <p>
-            Discover the art of professional photography with Photo Frenzy!
-            Experience the difference with our commitment to quality and creativity, where every shot is a masterpiece.
-          </p>
-        </div>
-        <div class="col-lg-8 col-md-7 team_container text_center">
-          <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Photography Website Form</title>
-          </head>
-          <body>
-          <h2>Contact Form</h2>
-          <form action="#" method="post">
-            <label for="first_name">First Name:</label><br>
-            <input type="text" id="first_name" name="first_name" required><br><br>
+                    <label for="last_name">Last Name:</label><br>
+                    <input type="text" id="last_name" name="last_name" required><br><br>
 
-            <label for="last_name">Last Name:</label><br>
-            <input type="text" id="last_name" name="last_name" required><br><br>
+                    <label for="email">Email:</label><br>
+                    <input type="email" id="email" name="email" required><br><br>
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+                    <label for="phone">Phone:</label><br>
+                    <input type="tel" id="phone" name="phone" required><br><br>
 
-            <label for="phone">Phone:</label><br>
-            <input type="tel" id="phone" name="phone" required><br><br>
+                    <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
+                    <label for="subscribe">Subscribe to our email list</label><br><br>
 
-            <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
-            <label for="subscribe">Subscribe to our email list</label><br><br>
-
-            <input type="submit" value="Submit">
-          </form>
-          </body>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end services section -->
-
-  <!-- contact section -->
-
-  <section class="contact_section ">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-8 map_container">
-          <div class="map">
-            <div id="googleMap"></div>
-          </div>
-        </div>
-        <div class="col-md-4 detail-box detail_box_common">
-          <div>
-            <div class="heading_container">
-              <h2>
-                Get In Touch
-              </h2>
+                    <input type="submit" value="Submit">
+                </form>
             </div>
-            <div class="info_contact">
-              <div class="contact_link_box">
-                <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span>
-                    Location
-                  </span>
-                </a>
-                <a href="">
-                  <i class="fa fa-phone" aria-hidden="true"></i>
-                  <span>
-                    Call +01 1234567890
-                  </span>
-                </a>
-                <a href="">
-                  <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <span>
-                    demo@gmail.com
-                  </span>
-                </a>
-              </div>
-              <div class="info_social">
-                <a href="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-              </div>
+            <div class="col-lg-8 col-md-7 team_container text_center">
+                <div id="gallery"></div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
+<!-- end services section -->
 
-  <!-- end contact section -->
-
-  <!-- footer section -->
-  <footer class="footer_section">
+<!-- contact section -->
+<section class="contact_section">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-xl-6">
-          <p>
-            &copy; <span id="displayYear"></span> All Rights Reserved. Design
-            by
-            <a href="https://html.design/">Free Html Templates</a>
-          </p>
+        <div class="row">
+            <div class="col-md-8 map_container">
+                <div class="map">
+                    <div id="googleMap"></div>
+                </div>
+            </div>
+            <div class="col-md-4 detail-box detail_box_common">
+                <div class="heading_container">
+                    <h2>Get In Touch</h2>
+                </div>
+                <div class="info_contact">
+                    <div class="contact_link_box">
+                        <a href="">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            <span>Location</span>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            <span>Call +01 1234567890</span>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <span>demo@gmail.com</span>
+                        </a>
+                    </div>
+                    <div class="info_social">
+                        <a href="">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-xl-6">
-          <div class="link_box">
-            <a class="" href="index.html">
-              Home
-            </a>
-            <a class="" href="about.html">
-              About
-            </a>
-            <a class="" href="portfolio.html">
-              Portfolio
-            </a>
-            <a class="" href="services.html">
-              Team
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
-  <!-- footer section -->
+</section>
+<!-- end contact section -->
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <script src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
+<!-- footer section -->
+<footer class="footer_section">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-6">
+                <p>&copy; <span id="displayYear"></span> All Rights Reserved. Design by <a href="https://html.design/">Free Html Templates</a></p>
+            </div>
+            <div class="col-xl-6">
+                <div class="overlay-content">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="portfolio.html">Work</a>
+                    <a href="services.html">Services</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- end footer section -->
 
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="js/custom.js"></script>
+<!-- Google Map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+<!-- End Google Map -->
+
+<script>
+    const galleryData = {
+        "gallery": [
+            {
+                "title": "Wedding Photography",
+                "url": "images/weddingphoto.jpg",
+                "description": "Weddings"
+            },
+            {
+                "title": "Event Photography",
+                "url": "images/eventphoto.jpg",
+                "description": "Events"
+            },
+            {
+                "title": "Arial Photography",
+                "url": "images/arielphoto.jpg",
+                "description": "Ariels"
+            },
+        ]
+    };
+
+    function updateGallery(images) {
+        const gallery = document.getElementById('gallery');
+        images.forEach(image => {
+            const imgElement = document.createElement('img');
+            imgElement.src = image.url;
+            imgElement.alt = image.description;
+            imgElement.title = image.title;
+
+            const titleElement = document.createElement('h3');
+            titleElement.textContent = image.title;
+
+            const descElement = document.createElement('p');
+            descElement.textContent = image.description;
+
+            const container = document.createElement('div');
+            container.appendChild(titleElement);
+            container.appendChild(imgElement);
+            container.appendChild(descElement);
+
+            gallery.appendChild(container);
+        });
+    }
+
+    updateGallery(galleryData.gallery);
+</script>
 </body>
 
 </html>
